# llm-tray

./: .gitignore  README.md
local-clip/: README.md  main.py  pyproject.toml
local-rerank/: README.md  pyproject.toml  requirements.txt  rerank_server.py  test_ollama_rerank.py
