[project]
name = "local-rerank"
version = "0.1.0"
description = "基于 HuggingFace Transformers 的本地 Rerank 服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[tool.uv]
python-preference = "only-managed"
python = "3.12.8"

